--- a/src/Page/userAuth/userAuth.scss
+++ b/src/Page/userAuth/userAuth.scss
@@ -30,23 +30,11 @@ $gray: rgb(201, 201, 201);
   background-color: $mainColor;
 }
 
-.userInfo {
-  @media (max-width: 435px) {
-    margin-top: 10%;
-    padding: 60% 0% 20% 0%;
-  }
-}
-.registerView {
-  @media (max-width: 435px) {
-    padding: 70% 0% 70% 0%;
-  }
-}
-
 .Auth-area {
   max-width: 1200px;
   min-width: 280px;
   width: 100%;
-  height: 100vh;
+  height: 100--vh;
 
   display: -webkit-box;
   display: -moz-box;
