--- a/src/Page/userAuth/userAuth.scss
+++ b/src/Page/userAuth/userAuth.scss
@@ -34,7 +34,7 @@ $gray: rgb(201, 201, 201);
   max-width: 1200px;
   min-width: 280px;
   width: 100%;
-  height: 100--vh;
+  height: calc(var(--vh, 1vh) * 100);
 
   display: -webkit-box;
   display: -moz-box;
