Register 페이지 아이디 검증 버튼 및 백엔드 로직 완성

--- a/src/Page/userAuth/userAuth.scss
+++ b/src/Page/userAuth/userAuth.scss
@@ -5,15 +5,18 @@ $gray: rgb(201, 201, 201);
 .mobileKeyboard {
   height: 1800px;
 }
-.noshow {
+#noshow {
   display: none;
+}
+#gray {
+  background-color: $gray;
 }
 
 .black {
   color: $blackSvg;
 }
 
-.bgblack {
+#bgblack {
   background-color: black;
   color: white;
 }
